// ERD
// Paste this into dbdiagram.io

Table freelancers {
  id integer [primary key, increment]
  full_name varchar [not null]
  email varchar [not null, unique]
  password_hash text [not null]
  created_at timestamp [default: `now()`]
  last_login timestamp
}

Table freelancer_info {
  id integer [primary key, increment]
  freelancer_id integer [not null, unique]
  security_question varchar [not null]
  security_answer_hash text [not null]
}

Ref: freelancer_info.freelancer_id > freelancers.id

// Default Content Schema for App Homepage

Table pages {
  id int [pk, increment]
  slug varchar [unique, not null] // e.g., 'home'
  title varchar
  created_at timestamp
  updated_at timestamp

  Note: 'Represents a web page like home, about, etc.'
}

Table sections {
  id int [pk, increment]
  page_id int [not null, ref: > pages.id]
  title varchar
  type varchar // e.g., 'hero', 'features', 'cta'
  "order" int // Order in page
  settings json // Optional layout settings
  created_at timestamp
  updated_at timestamp

  Note: 'Defines blocks inside a page like Hero, Features, etc.'
}

Table content_blocks {
  id int [pk, increment]
  section_id int [not null, ref: > sections.id]
  type varchar // e.g., 'heading', 'paragraph', 'button', 'image'
  content text // Or JSON if structured
  "order" int
  created_at timestamp
  updated_at timestamp

  Note: 'Smaller content pieces inside a section.'
}

Table media {
  id int [pk, increment]
  url varchar
  alt_text varchar
  caption varchar
  created_at timestamp
  updated_at timestamp

  Note: 'Stores images, videos or media files.'
}
